--- a/mqtt_fastapi/dockerfile
+++ b/mqtt_fastapi/dockerfile
@@ -7,6 +7,7 @@ WORKDIR /app
 # 필요한 파일 복사
 COPY requirements.txt .
 COPY main.py .
+COPY mqtt_client.py .
 
 # 의존성 설치
 RUN pip install --no-cache-dir -r requirements.txt
