feat :: 서버 코드 재작성

--- a/mqtt_fastapi/dockerfile
+++ b/mqtt_fastapi/dockerfile
@@ -1,16 +1,12 @@
-# Python 3.10 slim 이미지 기반
+# Dockerfile 수정
 FROM python:3.10-slim
 
-# 작업 디렉토리 설정
 WORKDIR /app
 
-# 필요한 파일 복사
 COPY requirements.txt .
-COPY main.py .
-COPY mqtt_client.py .
 
-# 의존성 설치
 RUN pip install --no-cache-dir -r requirements.txt
 
-# FastAPI 서버 실행
+COPY app/* .
+
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
